syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 qty = 4;
  float price = 5;
  string category = 6;
}